@@ -57,7 +57,11 @@ public class RideService {
     }
 
     public List<RideResponseDTO> getAllRides() {
-        return rideRepository.findAll().stream().map(this::mapToResponseDTO).collect(Collectors.toList());
+        List<Ride> rides = rideRepository.findAll();
+
+        return rides.stream().map(this::mapToResponseDTO).toList();
+
+//        return rideRepository.findAll().stream().map(this::mapToResponseDTO).collect(Collectors.toList());
     }
 
     public RideResponseDTO getRideById(Long id) {
